changed html code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <br>
     <button>ON</button>
 
-    <div id="box"></div>
+    <div id="box">
+        <h1>hello wassup buddy </h1>
+    </div>
     
 
 
